# faac-backend

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  aac-app-project-plan.md  aac_guidelines.txt  create_tables.sql  faac.db  fly.toml  links.txt  pyproject.toml  set_fly_secrets.sh
.cursor/rules/: backend-rules.mdc
app/: main.py
app/api/: __init__.py  keyword.py  pictogram.py  pictogram_advanced.py  pictograms.py  voice.py
app/core/: __init__.py  config.py  db.py  deps.py
app/models/: __init__.py  keyword.py  voice.py
app/schemas/: __init__.py  audio.py  keyword.py  keyword_audio.py
app/services/: __init__.py  audio_service.py  base_service.py  bg_remover.py  do_bucket.py  image_judge.py  keyword_content_generator.py  keyword_service.py  open_symbols_client.py  open_symbols_downloader.py  open_symbols_sec_fetcher.py  photoroom_rmbg.py  pictogram_generator.py  pictogram_generator_google.py  pictogram_generator_ideogram.py  pictogram_generator_oa.py  pictogram_generator_openai.py  voice_generator.py
app/utils/: secret_gen.py
