[project]
name = "faac-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elevenlabs>=1.56.0",
    "fastapi[standard]>=0.115.12",
    "google-genai>=1.10.0",
    "loguru>=0.7.3",
    "openai>=1.73.0",
    "pillow>=11.2.1",
    "pydantic-settings>=2.8.1",
    "requests>=2.32.3",
]
